--- a/src/ui.html
+++ b/src/ui.html
@@ -68,7 +68,7 @@
     }
     .btn:hover { transform: translateY(-1px); box-shadow: var(--shadow-1); }
     .btn.primary { background: #0c7bff; border-color: #0c7bff; color: #fff; }
-    .btn.secondary { background: #eef1f6; color: var(--color-text); }
+    .btn.secondary { background: #eef1f6; color: #1d1f25; }
     .btn.ghost { background: var(--color-panel); }
     .btn.small { padding: 6px 10px; font-size: 12px; }
     .btn.tiny { padding: 6px 10px; font-size: 12px; }
@@ -196,13 +196,14 @@
     body.dark .tab-btn { color: var(--color-text-secondary); }
     body.dark .tab-btn.active { color: var(--color-primary); }
     body.dark .card { background: var(--color-panel); border-color: var(--color-border); }
-    body.dark .btn.secondary { background: #333; color: #eee; }
-    body.dark .btn.ghost { background: #2a2a2e; color: #eee; }
+    body.dark .btn.secondary { background: #3a3a3e; color: #f5f5f5; }
+    body.dark .btn.ghost { background: #2a2a2e; color: #f5f5f5; }
     body.dark input[type="text"], body.dark input[type="password"] { background: #1f1f22; border-color: var(--color-border); color: #eee; }
     body.dark #output { background: #242424; color: #eee; border-color: var(--color-border); }
     body.dark .logs { background: #242424; color: #bbb; border-color: var(--color-border); }
     body.dark .help-item { background: #2f2f2f; border-color: var(--color-border); }
-    body.dark .help-item .label { color: #eee; }
+    body.dark .help-item .label { color: #f5f5f5; }
+    body.dark .card-title { color: #f5f5f5; }
     * { scrollbar-width: thin; scrollbar-color: var(--color-border) transparent; }
     *::-webkit-scrollbar { width: 8px; }
     *::-webkit-scrollbar-track { background: transparent; }
